# specter

./: README.md  pyproject.toml  requirements.txt  specter.py  test_report.html
forensic_tool/: __init__.py  main.py  menu.py
forensic_tool/core/: config.py  report.py  utils.py
forensic_tool/modules/: __init__.py  file_ops.py  logs.py  network.py  system.py  threat_intel.py  timeline.py
